Use <img> for logo SVG to save 30 DOM elements count - Lighthouse wants maximum of 800 elements, about 48 more to go - Set img size width to avoid content layout shift

--- a/packages/scrabble-solver/src/pages/index.module.scss
+++ b/packages/scrabble-solver/src/pages/index.module.scss
@@ -21,6 +21,7 @@
 }
 
 .logo {
+  width: calc(var(--logo--aspect-ratio) * var(--logo--height));
   height: var(--logo--height);
   user-select: none;
 }
